--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
                 <nav>
                     <ul>
                         <li><a href="#About">About US</a></li>
-                        <li><a href="#Product">Product</a></li>
-                        <li><a href="#Contact">Contact</a></li>
+                        <li><a href="my1stcategory.html">Arttoy</a></li>
+                        <li><a href="my2ndcategory.html">Decorations</a></li>
                     </ul>
                 </nav>
             
