--- a/my1stcategory.html
+++ b/my1stcategory.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="mystyle.css"/>
 </head>
 <body>
-    
+    <div class="content">
+        
+    </div>
 </body>
 </html>
