edit head name my1st

--- a/my1stcategory.html
+++ b/my1stcategory.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="content">
-        <section id="Product">
-                <h2 class="Product">✮ Product ✮</h2>
+        <section >
+                <h2 class="Arttoy">✮ Art Toy ✮</h2>
                 <img class="hirono" src="resources/hirono.jpg" alt="Hirono"/>
                 <div>
                     <p class="cr">แหล่งที่มา:<a href="http://www.popmart.com">www.popmart.com</a></p>
