add photo arttoy product and name product

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             </section>
             <section id="Product">
                 <h2 class="Product">✮ Product ✮</h2>
+                <img src="./resources/arttoy1.jpg" alt="Arttoyphoto">
+                <p class="arttoy1">Art Toy</p>
                 
             </section>
             <hr>
