add photo decoration product and name product

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                 <h2 class="Product">✮ Product ✮</h2>
                 <img src="./resources/arttoy1.jpg" alt="Arttoyphoto">
                 <p class="arttoy1">Art Toy</p>
-                
+                <img src="./resources/decoration3.jpg " alt="Decorationphoto">
+                <p class="decorations">Decorations</p>
+
             </section>
             <hr>
             <video src="./resources/video.mp4" width="660" lenght="500" controls>
