--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
             <section id="Product">
                 <h2 class="Product">✮ Product ✮</h2>
                 <img src="./resources/arttoy1.jpg" alt="Arttoyphoto">
+                <p class="cr">แหล่งที่มา:<a href="http://www.popmart.com">www.popmart.com</a></p>
                 <p class="arttoy1">Art Toy</p>
                 <img src="./resources/decoration3.jpg " alt="Decorationphoto">
+                <p class="cr">แหล่งที่มา:<a href="http://www.wangtangdecor.com">www.wangtangdecor.com</a></p>
                 <p class="decorations">Decorations</p>
 
             </section>
