--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 <h1>𖦹 Buttercuptoy 𖦹</h1>
                 <nav>
                     <ul>
+                        <h2 class="logo">𖦹BUTTERCUPTOY𖦹</h2>
                         <li><a href="#About">About US</a></li>
                         <li><a href="my1stcategory.html">Arttoy</a></li>
                         <li><a href="my2ndcategory.html">Decorations</a></li>
