edit header in 1st

--- a/my1stcategory.html
+++ b/my1stcategory.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <div class="content">
+        <header>
+            <h1 class="Arttoy">✮ Art Toy ✮</h1>
+        </header>
         <section >
-                <h2 class="Arttoy">✮ Art Toy ✮</h2>
+                
                 <img class="hirono" src="resources/hirono.jpg" alt="Hirono"/>
                 <div>
                     <p class="cr">แหล่งที่มา:<a href="http://www.popmart.com">www.popmart.com</a></p>
