add more nav in index

--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
                
                 <nav>
                     <ul>
-                        <h2 class="logo">𖦹BUTTERCUPTOY𖦹</h2>
-                        <li><a href="#About">About US</a></li>
-                        <li><a href="my1stcategory.html">Arttoy</a></li>
-                        <li><a href="my2ndcategory.html">Decorations</a></li>
+                        <h2 class="logo">𖦹 BUTTERCUPTOY 𖦹</h2>
+                        <li><a href="#About">✦ About US</a></li>
+                        <li><a href="#Product">✦ Product</a></li>
+                        <li><a href="my1stcategory.html">✦ Arttoy</a></li>
+                        <li><a href="my2ndcategory.html">✦ Decorations</a></li>
+                        <li><a href="#Contact">✦ Contact Us</a></li>
+
                     </ul>
                 </nav>
             </header>
