--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="mystyle.css"/>
 </head>
 <body>
-    
+    <div class="content">
+        <header>
+            <h1 class="decoration">Decorations</h1>
+        </header>
+    </div>
 </body>
 </html>
