--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -10,6 +10,14 @@
     <div class="content">
         <header>
             <h1 class="decoration">Decorations</h1>
+            <nav>
+                    <ul>
+                        <h2 class="logo">𖦹 BUTTERCUPTOY 𖦹</h2>
+                        <li><a href="index.html">✦ Home</a></li>
+                        <li><a href="my1stcategory.html">✦ Arttoy</a></li>
+                        
+                    </ul>
+                </nav>
         </header>
     </div>
 </body>
