--- a/my1stcategory.html
+++ b/my1stcategory.html
@@ -12,10 +12,9 @@
             <h1 class="Arttoy">✮ Art Toy ✮</h1>
             <nav>
                     <ul>
-                        <h2 class="logo">𖦹BUTTERCUPTOY𖦹</h2>
-                        <li><a href="index.html">Home</a></li>
-                        <!-- <li><a href="my1stcategory.html">Arttoy</a></li> -->
-                        <li><a href="my2ndcategory.html">Decorations</a></li>
+                        <h2 class="logo">𖦹 BUTTERCUPTOY 𖦹</h2>
+                        <li><a href="index.html">✦ Home</a></li>
+                        <li><a href="my2ndcategory.html">✦ Decorations</a></li>
                     </ul>
                 </nav>
         </header>
