add photo box for arttoy in 2nd

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -19,6 +19,9 @@
                     </ul>
                 </nav>
         </header>
+        <article>
+            <img src="./resources/decoration3.jpg" alt="box for arttoy">
+        </article>
     </div>
 </body>
 </html>
