add information about model shelf

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -21,6 +21,9 @@
         </header>
         <article>
             <img src="./resources/decoration3.jpg" alt="box for arttoy">
+            <p class="box1">Model Shelf</p>
+            <p class="abox1">Size 15*40*20 cm.</p>
+            <p class="pbox1">590 Bath</p>
         </article>
     </div>
 </body>
