edit photo in 2nd

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -20,7 +20,7 @@
                 </nav>
         </header>
         <article>
-            <img src="./resources/decoration3.jpg" alt="box for arttoy">
+            <img src="./resources/arttoyshelf.jpg" alt="box for arttoy">
             <p class="cr">แหล่งที่มา:<a href="http://www.wangtangdecor.com">www.wangtangdecor.com</a></p>
             <p class="box1">Model Shelf</p>
             <p class="abox1">Size 15*40*20 cm.</p>
