edit photo decoration in index

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <img src="./resources/arttoy1.jpg" alt="Arttoyphoto">
                 <p class="cr">แหล่งที่มา:<a href="http://www.popmart.com">www.popmart.com</a></p>
                 <p class="arttoy1">Art Toy</p>
-                <img src="./resources/decoration3.jpg " alt="Decorationphoto">
+                <img src="./resources/decorations.jpg" alt="Decorationphoto">
                 <p class="cr">แหล่งที่มา:<a href="http://www.wangtangdecor.com">www.wangtangdecor.com</a></p>
                 <p class="decorations">Decorations</p>
 
