add class in img index file

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             </section>
             <section id="Product">
                 <h2 class="Product">✮ Product ✮</h2>
-                <img src="./resources/arttoy1.jpg" alt="Arttoyphoto">
+                <img class="photoshelf" src="./resources/arttoy1.jpg" alt="Arttoyphoto">
                 <p class="cr">แหล่งที่มา:<a href="http://www.popmart.com">www.popmart.com</a></p>
                 <p class="arttoy1">Art Toy</p>
-                <img src="./resources/decorations.jpg" alt="Decorationphoto">
+                <img class="photodec" src="./resources/decorations.jpg" alt="Decorationphoto">
                 <p class="cr">แหล่งที่มา:<a href="http://www.wangtangdecor.com">www.wangtangdecor.com</a></p>
                 <p class="decorations">Decorations</p>
 
