add bagphoto in 2nd

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -25,6 +25,8 @@
             <p class="box1">Model Shelf</p>
             <p class="abox1">Size 15*40*20 cm.</p>
             <p class="pbox1">590 Bath</p>
+
+            <img class="bagphoto" src="./resources/bagarttoy.jpg" alt="bagforarttoy">
         </article>
     </div>
 </body>
