add cr in bagphoto

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -27,6 +27,7 @@
             <p class="pbox1">590 Bath</p>
 
             <img class="bagphoto" src="./resources/bagarttoy.jpg" alt="bagforarttoy">
+            <p class="cr">แหล่งที่มา:<a href="http://www.lazada.co.th">www.lazada.co.th</a></p>
         </article>
     </div>
 </body>
