--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -23,11 +23,14 @@
             <img class="photoshelf" src="./resources/arttoyshelf.jpg" alt="box for arttoy">
             <p class="cr">แหล่งที่มา:<a href="http://www.wangtangdecor.com">www.wangtangdecor.com</a></p>
             <p class="box1">Model Shelf</p>
-            <p class="abox1">Size 15*40*20 cm.</p>
-            <p class="pbox1">590 Bath</p>
+            <p class="abox1">Size : 15*40*20 cm.</p>
+            <p class="pbox1">Price : 590 Bath</p>
 
             <img class="bagphoto" src="./resources/bagarttoy.jpg" alt="bagforarttoy">
             <p class="cr">แหล่งที่มา:<a href="http://www.lazada.co.th">www.lazada.co.th</a></p>
+            <p class="bagn">Bag Arttoy</p>
+            <p class="baga">Size : 18*14*8</p>
+            <p class="bagp">Price : 99 Bath</p>
         </article>
     </div>
 </body>
