add color font size in baga class

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -29,7 +29,7 @@
             <img class="bagphoto" src="./resources/bagarttoy.jpg" alt="bagforarttoy">
             <p class="cr">แหล่งที่มา:<a href="http://www.lazada.co.th">www.lazada.co.th</a></p>
             <p class="bagn">Bag Arttoy</p>
-            <p class="baga">Size : 18*14*8</p>
+            <p class="baga">Size : 18*14*8 cm.</p>
             <p class="bagp">Price : 99 Bath</p>
         </article>
     </div>
