add arttoy clear box photo

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -20,7 +20,7 @@
                 </nav>
         </header>
         <article>
-            <img class="photoshelf" src="./resources/arttoyshelf.jpg" alt="box for arttoy">
+            <img class="photoshelf" src="./resources/arttoyshelf.jpg" alt="shelfforarttoy">
             <p class="cr">แหล่งที่มา:<a href="http://www.wangtangdecor.com">www.wangtangdecor.com</a></p>
             <p class="box1">Model Shelf</p>
             <p class="abox1">Size : 15*40*20 cm.</p>
@@ -31,6 +31,8 @@
             <p class="bagn">Bag Arttoy</p>
             <p class="baga">Size : 18*14*8 cm.</p>
             <p class="bagp">Price : 99 Bath</p>
+
+            <img class="artbox" src="./resources/box4.jpg" alt="arttoyclearbox">
         </article>
     </div>
 </body>
