add cr arttoy clear box photo

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -33,6 +33,7 @@
             <p class="bagp">Price : 99 Bath</p>
 
             <img class="artbox" src="./resources/box4.jpg" alt="arttoyclearbox">
+            <p class="cr">แหล่งที่มา:<a href="http://www.shopee.co.th">www.shopee.co.th</a></p>
         </article>
     </div>
 </body>
