--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -34,6 +34,7 @@
 
             <img class="artbox" src="./resources/box4.jpg" alt="arttoyclearbox">
             <p class="cr">แหล่งที่มา:<a href="http://www.shopee.co.th">www.shopee.co.th</a></p>
+            <p class="clearn">Arttoy clear box</p>
         </article>
     </div>
 </body>
