add about clear box

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -35,6 +35,8 @@
             <img class="artbox" src="./resources/box4.jpg" alt="arttoyclearbox">
             <p class="cr">แหล่งที่มา:<a href="http://www.shopee.co.th">www.shopee.co.th</a></p>
             <p class="clearn">Arttoy clear box</p>
+            <p class="cleara">Size : 18*27*22 cm.</p>
+
         </article>
     </div>
 </body>
