add price clear box

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -36,6 +36,7 @@
             <p class="cr">แหล่งที่มา:<a href="http://www.shopee.co.th">www.shopee.co.th</a></p>
             <p class="clearn">Arttoy clear box</p>
             <p class="cleara">Size : 18*27*22 cm.</p>
+            <p class="clearp">Price : 129 Bath</p>
 
         </article>
     </div>
