edit name header 2nd

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -9,7 +9,7 @@
 <body>
     <div class="content">
         <header>
-            <h1 class="decoration">Decorations</h1>
+            <h1 class="decoration">✮ Decorations ✮</h1>
             <nav>
                     <ul>
                         <h2 class="logo">𖦹 BUTTERCUPTOY 𖦹</h2>
