add photo arttoy white box

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -38,6 +38,9 @@
             <p class="cleara">Size : 18*27*22 cm.</p>
             <p class="clearp">Price : 129 Bath</p>
 
+            <img class="whitebox" src="./resources/box5.jpg" alt="arttoywhitebox">
+
+
         </article>
     </div>
 </body>
