add cr arttoy white box

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -39,6 +39,7 @@
             <p class="clearp">Price : 129 Bath</p>
 
             <img class="whitebox" src="./resources/box5.jpg" alt="arttoywhitebox">
+            <p class="cr">แหล่งที่มา:<a href="http://www.shopee.co.th">www.shopee.co.th</a></p>
 
 
         </article>
