--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -40,6 +40,7 @@
 
             <img class="whitebox" src="./resources/box5.jpg" alt="arttoywhitebox">
             <p class="cr">แหล่งที่มา:<a href="http://www.shopee.co.th">www.shopee.co.th</a></p>
+            <p class="whiten">Arttoy white box</p>
 
 
         </article>
