add size white box

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -41,6 +41,7 @@
             <img class="whitebox" src="./resources/box5.jpg" alt="arttoywhitebox">
             <p class="cr">แหล่งที่มา:<a href="http://www.shopee.co.th">www.shopee.co.th</a></p>
             <p class="whiten">Arttoy white box</p>
+            <p class="whitea">Size : 23.2*12.2*14.3 cm.</p>
 
 
         </article>
