add price white box

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -42,6 +42,7 @@
             <p class="cr">แหล่งที่มา:<a href="http://www.shopee.co.th">www.shopee.co.th</a></p>
             <p class="whiten">Arttoy white box</p>
             <p class="whitea">Size : 23.2*12.2*14.3 cm.</p>
+            <p class="whitep">Price : 99 Bath</p>
 
 
         </article>
