--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </section>
             <section id="Product">
                 <h2 class="Product">✮ Product ✮</h2>
-                <img class="photoshelf" src="./resources/arttoy1.jpg" alt="Arttoyphoto">
+                <img class="photoarttoy" src="./resources/arttoy1.jpg" alt="Arttoyphoto">
                 <p class="cr">แหล่งที่มา:<a href="http://www.popmart.com">www.popmart.com</a></p>
                 <p class="arttoy1">Art Toy</p>
                 <img class="photodec" src="./resources/decorations.jpg" alt="Decorationphoto">
