--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
             </section>
             <section id="Product">
                 <h2 class="Product">✮ Product ✮</h2>
-                <img class="photoarttoy" src="./resources/arttoy1.jpg" alt="Arttoyphoto">
-                <p class="cr">แหล่งที่มา:<a href="http://www.popmart.com">www.popmart.com</a></p>
-                <p class="arttoy1">Art Toy</p>
+                <div>
+                    <img class="photoarttoy" src="./resources/arttoy1.jpg" alt="Arttoyphoto">
+                    <p class="cr">แหล่งที่มา:<a href="http://www.popmart.com">www.popmart.com</a></p>
+                    <p class="arttoy1">Art Toy</p>
+                </div>
                 <img class="photodec" src="./resources/decorations.jpg" alt="Decorationphoto">
                 <p class="cr">แหล่งที่มา:<a href="http://www.wangtangdecor.com">www.wangtangdecor.com</a></p>
                 <p class="decorations">Decorations</p>
