edit with in content2 class

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="mystyle.css"/>
 </head>
 <body>
-    <div class="content">
+    <div class="content2">
         <header>
             <h1 class="decoration">✮ Decorations ✮</h1>
             <nav>
@@ -19,7 +19,7 @@
                     </ul>
                 </nav>
         </header>
-        <article>
+        <section>
             <img class="photoshelf" src="./resources/arttoyshelf.jpg" alt="shelfforarttoy">
             <p class="cr">แหล่งที่มา:<a href="http://www.wangtangdecor.com">www.wangtangdecor.com</a></p>
             <p class="box1">Model Shelf</p>
@@ -45,7 +45,7 @@
             <p class="whitep">Price : 99 Bath</p>
 
 
-        </article>
+        </section>
     </div>
 </body>
 </html>
