edit text in 2nd file

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -22,27 +22,27 @@
         <section>
             <img class="photoshelf" src="./resources/arttoyshelf.jpg" alt="shelfforarttoy">
             <p class="cr">แหล่งที่มา:<a href="http://www.wangtangdecor.com">www.wangtangdecor.com</a></p>
-            <p class="box1">Model Shelf</p>
-            <p class="abox1">Size : 15*40*20 cm.</p>
-            <p class="pbox1">Price : 590 Bath</p>
+            <p class="box1">⊹ Model Shelf ⊹</p>
+            <p class="abox1">✦ Size : 15*40*20 cm.</p>
+            <p class="pbox1">⋆ Price : 590 Bath ⋆</p>
 
             <img class="bagphoto" src="./resources/bagarttoy.jpg" alt="bagforarttoy">
             <p class="cr">แหล่งที่มา:<a href="http://www.lazada.co.th">www.lazada.co.th</a></p>
-            <p class="bagn">Bag Arttoy</p>
-            <p class="baga">Size : 18*14*8 cm.</p>
-            <p class="bagp">Price : 99 Bath</p>
+            <p class="bagn">⊹ Bag Arttoy ⊹</p>
+            <p class="baga">✦ Size : 18*14*8 cm.</p>
+            <p class="bagp">⋆ Price : 99 Bath ⋆</p>
 
             <img class="artbox" src="./resources/box4.jpg" alt="arttoyclearbox">
             <p class="cr">แหล่งที่มา:<a href="http://www.shopee.co.th">www.shopee.co.th</a></p>
-            <p class="clearn">Arttoy clear box</p>
-            <p class="cleara">Size : 18*27*22 cm.</p>
-            <p class="clearp">Price : 129 Bath</p>
+            <p class="clearn">⊹ Arttoy clear box ⊹</p>
+            <p class="cleara">✦ Size : 18*27*22 cm.</p>
+            <p class="clearp">⋆ Price : 129 Bath ⋆</p>
 
             <img class="whitebox" src="./resources/box5.jpg" alt="arttoywhitebox">
             <p class="cr">แหล่งที่มา:<a href="http://www.shopee.co.th">www.shopee.co.th</a></p>
-            <p class="whiten">Arttoy white box</p>
-            <p class="whitea">Size : 23.2*12.2*14.3 cm.</p>
-            <p class="whitep">Price : 99 Bath</p>
+            <p class="whiten">⊹ Arttoy white box ⊹</p>
+            <p class="whitea">✦ Size : 23.2*12.2*14.3 cm.</p>
+            <p class="whitep">⋆ Price : 99 Bath ⋆</p>
 
 
         </section>
