add footer in 1st file

--- a/my1stcategory.html
+++ b/my1stcategory.html
@@ -55,6 +55,13 @@
                 <p class="skullpandaa">✦ Skullpanda is a sweet-looking girl with a mysterious personality. She has the ability to travel freely through time, space, and parallel worlds in order to find her true identity.</p>
                 <p class="skullpandap">⋆ Price:380 Bath ⋆</p>
             </section>
+            <footer>
+                <section id="Contact">
+                    <h2 class="contact1">⟡ CONTACT US ⟡</h2>
+                    <p class="contact2">come to play with us!<br>Instargram:buttercup.toy<br>www.buttercuptoy.com</p>
+                    
+                </section>
+            </footer>
     </div>
 </body>
 </html>
