add footer in 2nd file

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -46,6 +46,13 @@
 
 
         </section>
+        <footer>
+                <section id="Contact">
+                    <h2 class="contact1">⟡ CONTACT US ⟡</h2>
+                    <p class="contact2">come to play with us!<br>Instargram:buttercup.toy<br>www.buttercuptoy.com</p>
+                    
+                </section>
+            </footer>
     </div>
 </body>
 </html>
