edit font size in h1

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -15,6 +15,7 @@
                         <h2 class="logo">𖦹 BUTTERCUPTOY 𖦹</h2>
                         <li><a href="index.html">✦ Home</a></li>
                         <li><a href="my1stcategory.html">✦ Arttoy</a></li>
+                        <li><a href="#Contact">✦ Contact Us</a></li>
                         
                     </ul>
                 </nav>
