add photo in index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
                     </ul>
                 </nav>
             </header>
-                <img src="resources/arttoy.jpg" alt="Arttoy"/>
+                <div class="slider">
+                    <div class="sliders">
+                        <img src="resources/arttoy.jpg" alt="Arttoy">
+                        <img src="./resources/bubu.JPG" alt="Labubu">
+                        <img src="./resources/all.jpeg" alt="All arttoy">
+                    </div>
+                </div>
                 <p class="cr">แหล่งที่มา:<a href="https://www.centralpattana.co.th/en/shopping/shopping-update/lifestyle-activities/1159/top-5-art-toys-for-collectors">centralpattana</a></p>
                 
             
