add slide photo

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             </header>
                 <div class="slider">
                     <div class="sliders">
-                        <img src="resources/arttoy.jpg" alt="Arttoy">
-                        <img src="./resources/bubu.JPG" alt="Labubu">
+                        <img src="resources/arttoy.jpeg" alt="Arttoy">
+                        <img src="./resources/bubu.jpeg" alt="Labubu">
                         <img src="./resources/all.jpeg" alt="All arttoy">
                     </div>
                 </div>
