--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             
             <div class="video1">
                 <p class="video">✮ Introduction my shop ✮</p>
-                <video src="./resources/video.mp4" width="660" lenght="500" controls>
+                <video src="./resources/video1.mp4" width="660" lenght="500" controls>
                     <p>
                         Your browser doesn't support HTML video.Here is a<a href="./resources/video.mp4">link to the video</a>instead.
                     </p>
