--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                 <p class="video">✮ Introduction my shop ✮</p>
                 <video src="./resources/video1.mp4" width="660" lenght="500" controls>
                     <p>
-                        Your browser doesn't support HTML video.Here is a<a href="./resources/video.mp4">link to the video</a>instead.
+                        Your browser doesn't support HTML video.Here is a<a href="./resources/video1.mp4">link to the video</a>instead.
                     </p>
             </div>
 
-            </video>
+            
             
                 </main>
             <footer>
