--- a/my1stcategory.html
+++ b/my1stcategory.html
@@ -56,6 +56,12 @@
                 <p class="skullpandaa">✦ Skullpanda is a sweet-looking girl with a mysterious personality. She has the ability to travel freely through time, space, and parallel worlds in order to find her true identity.</p>
                 <p class="skullpandap">⋆ Price:380 Bath ⋆</p>
             </section>
+            <div>
+                <video src="./resources/video2.mp4" width="660" lenght="500" controls>
+                    <p>
+                        Your browser doesn't support HTML video.Here is a<a href="./resources/video2.mp4">link to the video</a>instead.
+                    </p>
+            </div>
             <footer>
                 <section id="Contact">
                     <h2 class="contact1">⟡ CONTACT US ⟡</h2>
