--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Shop</title>
     <link rel="stylesheet" href="mystyle.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
         <div class="content">
             <header>
                 <h1>𖦹 Buttercuptoy 𖦹</h1>
                
-                <nav>
-                    <ul>
-                        <h2 class="logo">𖦹 BUTTERCUPTOY 𖦹</h2>
-                        <li><a href="#About">✦ About US</a></li>
-                        <li><a href="#Product">✦ Product</a></li>
-                        <li><a href="my1stcategory.html">✦ Arttoy</a></li>
-                        <li><a href="my2ndcategory.html">✦ Decorations</a></li>
-                        <li><a href="#Contact">✦ Contact Us</a></li>
-
-                    </ul>
-                </nav>
+                <div class="slidebar">
+                    <nav>
+                        <ul>
+                            <h2 class="logo">𖦹 BUTTERCUPTOY 𖦹</h2>
+                            <li><a href="#About">✦ About US</a></li>
+                            <li><a href="#Product">✦ Product</a></li>
+                            <li><a href="my1stcategory.html">✦ Arttoy</a></li>
+                            <li><a href="my2ndcategory.html">✦ Decorations</a></li>
+                            <li><a href="#Contact">✦ Contact Us</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </header>
                 <div class="slider">
                     <div class="sliders">
